--- a/miss.html
+++ b/miss.html
@@ -63,7 +63,7 @@
             <div class="sec quicklinks">
                 <h2>Liens Rapides</h2>
                 <ul>
-                    <li><a href="#">Accueil</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="#">À propos</a></li>
                 </ul>
             </div>
