--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="home-text container">
             <h2 class="home-title">Bienvenue sur le Blog ESGIS</h2>
             <span class="home-subtitle">
-                <span class="typing">Découvrez l'Excellence,</span>
-                <span class="typing">les Événements Mémorables</span>
-                <span class="typing">et Recevez les Nouvelles</span>
-                <span class="typing">de l'ESGIS 24h/24, 7j/7</span>
+                <span class="typing">Découvrez l'Excellence,<br></span>
+                <span class="typing">les Événements Mémorables <br></span>
+                <span class="typing">et Recevez les Nouvelles <br></span>
+                <span class="typing">de l'ESGIS 24h/24, 7j/7 <br></span>
             </span>
         </div>
     </section>
