--- a/football.html
+++ b/football.html
@@ -85,11 +85,11 @@
                 <ul class="info">
                     <li>
                         <span><i class='bx bxs-map'></i></span>
-                        <span>[Adresse de l'école]</span>
+                        <span>Boulevard du 30 Aout Lomé, Adidogomé</span>
                     </li>
                     <li>
                         <span><i class='bx bx-envelope'></i></span>
-                        <p><a href="mailto:[Email de contact de l'ESGIS]">[Email de contact de l'ESGIS]</a></p>
+                        <p><a href="mailto:esgis.togo@esgis.org">esgis.togo@esgis.org</a></p>
                     </li>
                 </ul>
             </div>
