--- a/miss.html
+++ b/miss.html
@@ -42,8 +42,8 @@
             <p><strong>Loisirs :</strong> Cinéma</p>
             <p>La Miss ESGIS, Saphira Laetitia, se prépare à représenter dignement le Togo à ce prestigieux concours de beauté universitaire. Nous sommes fiers de la soutenir dans cette aventure et lui souhaitons tout le succès possible.</p>
             <div class="profile">
-                <img src="miss-saphira.jpg" alt="ESGIS" class="profile-img">
-                <span class="profile-name">ESGIS</span>
+                <img src="miss-saphira.jpg" alt="Miss Saphira Laetitia" class="profile-img">
+                <span class="profile-name">Saphira Laetitia</span>
             </div>
         </div>
     </div>
@@ -72,11 +72,11 @@
                 <ul class="info">
                     <li>
                         <span><i class='bx bxs-map'></i></span>
-                        <span>[Adresse de l'école]</span>
+                        <span>Boulevard du 30 Aout Lomé, Adidogomé</span>
                     </li>
                     <li>
                         <span><i class='bx bx-envelope'></i></span>
-                        <p><a href="mailto:[Email de contact de l'ESGIS]">[Email de contact de l'ESGIS]</a></p>
+                        <p><a href="mailto:esgis.togo@esgis.org">esgis.togo@esgis.org</a></p>
                     </li>
                 </ul>
             </div>
